2008-05-11 Dodji Seketeli <dodji@gnome.org>

	* src/common/nmv-env.cc,h:
	  added build_path_to_help_file() entry point to compute the path
	  the a nemiver help file. That is needed to avoid using
	  gnome_help_display() and thus libgnome.
	* tests/test-env.cc: added this test file for the new entry point.
	* src/workbench/nmv-workbench.cc:
	  (Workbench::on_contents_menu_item_action): don't use
	  gnome_help_display(). Instead, spawn yelp with the path to
	  to the nemiver help file. Okay this is a bit rude but there
	  is no better way right now.
	* configure.ac: don't detect libgnome anymore.
	* src/main.cc: don't initialize libgnome anymore.

2008-05-06 Dodji Seketeli <dodji@gnome.org>

	* src/uicommon/nmv-terminal.cc: _GNU_SOURCE is defined on freebsd
	  as well, so use don't use it to discriminate that platform.
	  This should hopefully close #529718

2008-05-05 Dodji Seketeli <dodji@gnome.org>

	* src/uicommon/nmv-terminal.cc: include the right headers in lieu
	  of pty.h, on FreeBSD.
	  Patch from Romain Tartière <romain@blogreen.org>

2008-05-05 Dodji Seketeli <dodji@gnome.org>

	* src/dbgengine/nmv-gdb-engine.cc: don't include pty.h
	  It is useless here and breaks FreeBSD builds.
	  Patch from Romain Tartière <romain@blogreen.org>

2008-05-05 Dodji Seketeli <dodji@gnome.org>

	* src/common/nmv-ustring.cc: on FreeBSD, define strnlen().
	  Patch from Romain Tartière <romain@blogreen.org>.

2008-05-05 Dodji Seketeli <dodji@gnome.org>

	* src/common/nmv-proc-utils.cc:
	 Define __MAX_BAUD for FreeBSD.
	 Include specific FreeBSD headers for process manipulation.
	 Patch from Romain Tartière <romain@blogreen.org>

2008-05-05 Dodji Seketeli <dodji@gnome.org>

	* src/common/nmv-log-stream-utils.h:
	  For freebsd, make sure __ASSERT_FUNCTION is defined.
	  Patch from Romain Tartière <romain@blogreen.org>.

2008-05-04 Dodji Seketeli <dodji@gnome.org>

	* data/nemiver.desktop.in: remove obsolete fields.
	  A courtesy from Luca Bruno <lucab@debian.org>
