@@ -65,7 +65,8 @@ nmv-proc-mgr.cc
 publicheaders_DATA=$(headers)
 publicheadersdir=$(NEMIVER_INCLUDE_DIR)/common
 libnemivercommon_la_LDFLAGS=@NEMIVERCOMMON_LIBS@ -lutil \
-		-avoid-version -rpath $(libdir)/nemiver
+		-avoid-version -rpath $(libdir)/nemiver \
+		 -Wl,--as-needed
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libnemivercommon.pc
